# sdrplay

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  error.cpp  main.cpp  mySocket.cpp  mySocket.h  sdrplay.cpp  sdrplay.h  test.c
debian/: .gitignore  changelog  control  copyright  rules
src/: error.cpp  error.h  main.cpp  mySocket.cpp  mySocket.h  sdrplay.h
